--- a/courses.html
+++ b/courses.html
@@ -46,7 +46,7 @@
         <div class="courses-container fade-in-section">
 
             <div class="course-card">
-                 <img src="images/american_institutions.jpg" alt="American Institutions Image"> <div class="overlay"></div>
+                 <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>American Institutions (AI)</h3>
                      <p>Understanding U.S. government and history.</p>
@@ -67,7 +67,7 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/social_science.jpg" alt="Social Science Image"> <div class="overlay"></div>
+                 <img src="images/social_science.png" alt="Social Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Social Science (SS)</h3>
                      <p>Examine human society and relationships.</p>
