--- a/courses.html
+++ b/courses.html
@@ -74,7 +74,7 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/composition.jpg" alt="Composition Image"> <div class="overlay"></div>
+                 <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Composition (EN)</h3>
                      <p>Developing effective writing skills.</p>
