--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/course2.jpg" alt="Fine Arts Course Image"> <div class="overlay"></div>
+                 <img src="images/course2.png" alt="Fine Arts Course Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Fine Arts (FA)</h3>
                      <p>Explore artistic expression and its impact on culture.</p>
