--- a/courses.html
+++ b/courses.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/quantitative_literacy.jpg" alt="Quantitative Literacy Image"> <div class="overlay"></div>
+                 <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Quantitative Literacy (QL/QS)</h3>
                      <p>Applying mathematical skills.</p>
