--- a/courses.html
+++ b/courses.html
@@ -88,7 +88,7 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/life_science.jpg" alt="Life Science Image"> <div class="overlay"></div>
+                 <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Life Science</h3>
                      <p>Study of living organisms.</p>
