--- a/courses.html
+++ b/courses.html
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/physical_science.jpg" alt="Physical Science Image"> <div class="overlay"></div>
+                 <img src="images/physical_science.png" alt="Physical Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Physical Science (PS)</h3>
                      <p>Exploring non-living systems.</p>
