--- a/courses.html
+++ b/courses.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/communication.jpg" alt="Communication Image"> <div class="overlay"></div>
+                 <img src="images/communication.png" alt="Communication Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Communication (CM)</h3>
                      <p>Effective human communication.</p>
