--- a/courses.html
+++ b/courses.html
@@ -109,14 +109,14 @@
                 </div>
             </div>
             <div class="course-card">
-                 <img src="images/international_global.jpg" alt="International and Global Image"> <div class="overlay"></div>
+                 <img src="images/international_global.png" alt="International and Global Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>International & Global (IG)</h3>
                      <p>Understanding global perspectives.</p>
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/lifelong_wellness.jpg" alt="Lifelong Wellness Image"> <div class="overlay"></div>
+                 <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Lifelong Wellness (LW)</h3>
                      <p>Principles of health and well-being.</p>
