--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
              <div class="course-card">
-                 <img src="images/course1.jpg" alt="Humanities Course Image"> <div class="overlay"></div>
+                 <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Humanities (HU)</h3>
                      <p>Study philosophy, literature, and art.</p>
