--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
 
         <div class="courses-container fade-in-section">
 
-            <div class="course-card course-card-ai"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
+            <div class="course-card course-card-wide"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>American Institutions (AI)</h3>
                      <p>Understanding U.S. government and history.</p>
@@ -57,7 +57,7 @@
                      <p>Explore artistic expression and its impact on culture.</p>
                 </div>
             </div>
-             <div class="course-card course-card-hu"> <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
+             <div class="course-card"> <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Humanities (HU)</h3>
                      <p>Study philosophy, literature, and art.</p>
@@ -69,7 +69,7 @@
                      <p>Examine human society and relationships.</p>
                 </div>
             </div>
-             <div class="course-card course-card-en"> <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
+             <div class="course-card"> <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Composition (EN)</h3>
                      <p>Developing effective writing skills.</p>
@@ -81,7 +81,7 @@
                      <p>Applying mathematical skills.</p>
                 </div>
             </div>
-             <div class="course-card course-card-ls"> <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
+             <div class="course-card"> <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>Life Science</h3>
                      <p>Study of living organisms.</p>
@@ -111,8 +111,7 @@
                      <p>Principles of health and well-being.</p>
                 </div>
             </div>
-
-        </div> </main> <footer>
+            </div> </main> <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
     </footer>
 
