--- a/courses.html
+++ b/courses.html
@@ -45,7 +45,7 @@
 
         <div class="courses-container fade-in-section">
 
-            <div class="course-card course-card-wide"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
+            <div class="course-card course-card-ai-tall"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>American Institutions (AI)</h3>
                      <p>Understanding U.S. government and history.</p>
@@ -111,7 +111,7 @@
                      <p>Principles of health and well-being.</p>
                 </div>
             </div>
-            </div> </main> <footer>
+             </div> </main> <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
     </footer>
 
