--- a/courses.html
+++ b/courses.html
@@ -8,11 +8,6 @@
     <title>Courses - Jesús Lopez Aguilar</title>
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        .courses-container { visibility: hidden; } /* Hide container until JS runs */
-        .courses-container.masonry-init { visibility: visible; } /* Show after init */
-        .course-card { float: left; } /* Basic fallback float */
-    </style>
 </head>
 
 <body>
@@ -48,91 +43,93 @@
             <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
         </div>
 
-        <div class="courses-container fade-in-section">
-            <div class="course-card">
-                 <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
+        <div class="featured-course-area fade-in-section">
+             <div class="course-card course-card-ai-featured"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
                 <div class="text-overlay">
                      <h3>American Institutions (AI)</h3>
                      <p>Understanding U.S. government and history.</p>
                 </div>
             </div>
-            <div class="course-card">
-                 <img src="images/course2.png" alt="Fine Arts Course Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Fine Arts (FA)</h3>
-                     <p>Explore artistic expression and its impact on culture.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Humanities (HU)</h3>
-                     <p>Study philosophy, literature, and art.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/social_science.png" alt="Social Science Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Social Science (SS)</h3>
-                     <p>Examine human society and relationships.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Composition (EN)</h3>
-                     <p>Developing effective writing skills.</p>
-                </div>
-            </div>
-            <div class="course-card">
-                 <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Quantitative Literacy (QL/QS)</h3>
-                     <p>Applying mathematical skills.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Life Science</h3>
-                     <p>Study of living organisms.</p>
-                </div>
-            </div>
-            <div class="course-card">
-                 <img src="images/physical_science.png" alt="Physical Science Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Physical Science (PS)</h3>
-                     <p>Exploring non-living systems.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/communication.png" alt="Communication Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Communication (CM)</h3>
-                     <p>Effective human communication.</p>
-                </div>
-            </div>
-            <div class="course-card">
-                 <img src="images/international_global.png" alt="International and Global Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>International & Global (IG)</h3>
-                     <p>Understanding global perspectives.</p>
-                </div>
-            </div>
-             <div class="course-card">
-                 <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>Lifelong Wellness (LW)</h3>
-                     <p>Principles of health and well-being.</p>
-                </div>
-            </div>
+        </div>
 
+        <div class="scrollable-courses-wrapper fade-in-section">
+            <button class="scroll-btn prev" onclick="scrollCourses(-1)" aria-label="Previous Courses">&#10094;</button>
+            <div class="courses-container" id="scrollableCourses">
+                <div class="course-card">
+                     <img src="images/course2.png" alt="Fine Arts Course Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Fine Arts (FA)</h3>
+                         <p>Explore artistic expression.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Humanities (HU)</h3>
+                         <p>Study philosophy, literature, art.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/social_science.png" alt="Social Science Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Social Science (SS)</h3>
+                         <p>Examine human society.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Composition (EN)</h3>
+                         <p>Developing writing skills.</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                     <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Quantitative Literacy (QL/QS)</h3>
+                         <p>Applying mathematical skills.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Life Science</h3>
+                         <p>Study of living organisms.</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                     <img src="images/physical_science.png" alt="Physical Science Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Physical Science (PS)</h3>
+                         <p>Exploring non-living systems.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/communication.png" alt="Communication Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Communication (CM)</h3>
+                         <p>Effective communication.</p>
+                    </div>
+                </div>
+                <div class="course-card">
+                     <img src="images/international_global.png" alt="International and Global Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>International & Global (IG)</h3>
+                         <p>Understanding global perspectives.</p>
+                    </div>
+                </div>
+                 <div class="course-card">
+                     <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image"> <div class="overlay"></div>
+                    <div class="text-overlay">
+                         <h3>Lifelong Wellness (LW)</h3>
+                         <p>Principles of health.</p>
+                    </div>
+                </div>
+                </div>
+             <button class="scroll-btn next" onclick="scrollCourses(1)" aria-label="Next Courses">&#10095;</button>
         </div> </main> <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
     </footer>
-
-    <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
 
     <script>
         // --- Menu Toggle Function ---
@@ -182,28 +179,18 @@
         const targets = document.querySelectorAll('.fade-in-section');
         targets.forEach(target => observer.observe(target));
 
-        // --- Masonry Layout Initialization ---
-        // Ensure the script runs after the DOM is loaded
-        window.addEventListener('load', () => {
-            const coursesContainer = document.querySelector('.courses-container');
-            if (coursesContainer) { // Check if container exists
-                // Initialize imagesLoaded first
-                imagesLoaded( coursesContainer, function() {
-                  // All images are loaded, now initialize Masonry
-                  console.log('Images loaded, initializing Masonry'); // For debugging
-                  const masonryInstance = new Masonry( coursesContainer, {
-                    itemSelector: '.course-card',
-                    columnWidth: '.course-card', // Use card width itself for column calculation
-                    gutter: 20, // Space between columns (adjust value to match desired visual gap)
-                    percentPosition: true // Better for responsive sizing
-                  });
-                  // Reveal container after Masonry runs
-                  coursesContainer.classList.add('masonry-init');
+        // --- Horizontal Scroll Button Function ---
+        function scrollCourses(direction) {
+            const container = document.getElementById('scrollableCourses');
+            if (container) {
+                // Calculate scroll amount (e.g., 80% of container width)
+                const scrollAmount = container.clientWidth * 0.8;
+                container.scrollBy({
+                    left: scrollAmount * direction, // direction is -1 for left, 1 for right
+                    behavior: 'smooth' // Smooth scrolling
                 });
             }
-        });
-        // --- End Masonry Layout ---
-
+        }
     </script>
     </body>
 </html>
