--- a/courses.html
+++ b/courses.html
@@ -36,96 +36,108 @@
         <a href="projects.html">Personal Projects</a>
     </div>
 
-    <main>
-        <div class="intro fade-in-section">
-            <h2>Welcome to My General Education Courses</h2>
-            <p>Alright, let’s get real—this section isn’t just about “what I’ve learned.” No, this is where I break down my journey through Salt Lake Community College, looking at the classes that molded me (sometimes with a side of tears). It’s a wild ride of knowledge and chaos, but it’s all part of how I’m building myself.</p>
-            <p>You'll see how each course gave me something important—whether it was insight, skills, or simply the experience of surviving all-nighters. These aren’t just bullet points; these are *experiences*—and here’s where I tell you all about them.</p>
-        </div>
+    <div class="courses-grid fade-in-section">
 
-        <div class="featured-course-area fade-in-section">
-             <div class="course-card course-card-ai-featured"> <img src="images/american_institutions.png" alt="American Institutions Image"> <div class="overlay"></div>
-                <div class="text-overlay">
-                     <h3>American Institutions (AI)</h3>
-                     <p>Understanding U.S. government and history.</p>
-                </div>
-            </div>
+    <div class="course-card large-card">
+        <img src="images/american_institutions.png" alt="American Institutions Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>American Institutions (AI)</h3>
+            <p>Understanding U.S. government and history.</p>
         </div>
+    </div>
 
-        <div class="scrollable-courses-wrapper fade-in-section">
-            <button class="scroll-btn prev" onclick="scrollCourses(-1)" aria-label="Previous Courses">&#10094;</button>
-            <div class="courses-container" id="scrollableCourses">
-                <div class="course-card">
-                     <img src="images/course2.png" alt="Fine Arts Course Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Fine Arts (FA)</h3>
-                         <p>Explore artistic expression.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/course1.png" alt="Humanities Course Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Humanities (HU)</h3>
-                         <p>Study philosophy, literature, art.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/social_science.png" alt="Social Science Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Social Science (SS)</h3>
-                         <p>Examine human society.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/composition.png" alt="Composition Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Composition (EN)</h3>
-                         <p>Developing writing skills.</p>
-                    </div>
-                </div>
-                <div class="course-card">
-                     <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Quantitative Literacy (QL/QS)</h3>
-                         <p>Applying mathematical skills.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/life_science.png" alt="Life Science Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Life Science</h3>
-                         <p>Study of living organisms.</p>
-                    </div>
-                </div>
-                <div class="course-card">
-                     <img src="images/physical_science.png" alt="Physical Science Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Physical Science (PS)</h3>
-                         <p>Exploring non-living systems.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/communication.png" alt="Communication Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Communication (CM)</h3>
-                         <p>Effective communication.</p>
-                    </div>
-                </div>
-                <div class="course-card">
-                     <img src="images/international_global.png" alt="International and Global Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>International & Global (IG)</h3>
-                         <p>Understanding global perspectives.</p>
-                    </div>
-                </div>
-                 <div class="course-card">
-                     <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image"> <div class="overlay"></div>
-                    <div class="text-overlay">
-                         <h3>Lifelong Wellness (LW)</h3>
-                         <p>Principles of health.</p>
-                    </div>
-                </div>
-                </div>
+    <div class="course-card">
+        <img src="images/course2.png" alt="Fine Arts Course Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Fine Arts (FA)</h3>
+            <p>Explore artistic expression.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/course1.png" alt="Humanities Course Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Humanities (HU)</h3>
+            <p>Study philosophy, literature, art.</p>
+        </div>
+    </div>
+
+    <div class="course-card large-card">
+        <img src="images/social_science.png" alt="Social Science Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Social Science (SS)</h3>
+            <p>Examine human society.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/composition.png" alt="Composition Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Composition (EN)</h3>
+            <p>Developing writing skills.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/quantitative_literacy.png" alt="Quantitative Literacy Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Quantitative Literacy (QL/QS)</h3>
+            <p>Applying mathematical skills.</p>
+        </div>
+    </div>
+
+    <div class="course-card large-card">
+        <img src="images/life_science.png" alt="Life Science Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Life Science</h3>
+            <p>Study of living organisms.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/physical_science.png" alt="Physical Science Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Physical Science (PS)</h3>
+            <p>Exploring non-living systems.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/communication.png" alt="Communication Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Communication (CM)</h3>
+            <p>Effective communication.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/international_global.png" alt="International and Global Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>International & Global (IG)</h3>
+            <p>Understanding global perspectives.</p>
+        </div>
+    </div>
+
+    <div class="course-card">
+        <img src="images/lifelong_wellness.png" alt="Lifelong Wellness Image">
+        <div class="overlay"></div>
+        <div class="text-overlay">
+            <h3>Lifelong Wellness (LW)</h3>
+            <p>Principles of health.</p>
+        </div>
+    </div>
+
+</div>
              <button class="scroll-btn next" onclick="scrollCourses(1)" aria-label="Next Courses">&#10095;</button>
         </div> </main> <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
